--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Eve Wallet Frontend</title>
+  <title>Eve Wallet</title>
   <base href="/">
 
   <meta name="robots" content="noindex"/>
