user auth finished

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Eve Wallet</title>
   <base href="/">
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 
   <meta name="robots" content="noindex"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
