--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Eve Wallet</title>
   <base href="/">
+  <meta property="og:image" content="https://api.everyone.bz/opengraph.png" />
   <link rel="manifest" href="assets/favicon/manifest.json">
   <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
