--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 </head>
-<body>
+<body class="notranslate">
 <app-root></app-root>
 </body>
 </html>
